--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --secondary-complementary-color: #003979;
 
   --max-width: 900px;
+  --max-height: 600px;
 }
 
 @font-face {
